# airbnb-Django-backend

./: OOPExample.py  pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detatils_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: Many To One.txt  admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description_and_more.py  0003_alter_room_country_alter_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  views.py
wishlists/: serializers.py  views.py
(+6 files in other folders)
